--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <!-- Cria um cabecalho com a logo e o nome/slogan -->
       <div class="header">
         <span>
-          <img src="https:\\github.com\PdrNTC\gerador-assinatura\tree\main\assets\imgs\logotipo.png" class="assinaturaImagem"
+          <img src="https://github.com/PdrNTC/gerador-assinatura/tree/main/assets/imgs/logotipo.png" class="assinaturaImagem"
             style="max-width: 400px;">
         </span>
         <h1 class="display-4">VIVA PREVIDÊNCIA</h1>
