--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <!-- Cria um cabecalho com a logo e o nome/slogan -->
       <div class="header">
         <span>
-          <img src="https://github.com/PdrNTC/gerador-assinatura/tree/main/assets/imgs/iconevivaass.jpg" class="assinaturaImagem"
-            style="max-width: 500px;">
+          <img src="https://raw.githubusercontent.com/PdrNTC/gerador-assinatura/main/assets/imgs/logotipo.png" class="assinaturaImagem"
+            style="max-width: 400px;">
         </span>
         <h1 class="display-4">VIVA PREVIDÊNCIA</h1>
         <p class="h2"> Gerador de Assinatura</p>
