--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Configura o arquivo CSS, o titulo e o icone da pagina -->
   <title>VIVAPREV - Gerador de Assinaturas</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="index.css" />
   <link rel="icon" href="C:\Users\Pedro\Desktop\Email-sign-generator-canvas\Email-sign-generator-canvas\assets\imgs\iconweb.png" type="image/png">
 </head>
