--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+  <style>
+	font-family: 'Montserrat', sans-serif;
+  </style>
   <link rel="stylesheet" type="text/css" href="index.css" />
   <link rel="icon" href="C:\Users\Pedro\Desktop\Email-sign-generator-canvas\Email-sign-generator-canvas\assets\imgs\iconweb.png" type="image/png">
 </head>
