--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
   <style>
+	.assinatura-div{
+		font-family: 'Montserrat', sans-serif;
+	}
 	font-family: 'Montserrat', sans-serif;
   </style>
   <link rel="stylesheet" type="text/css" href="index.css" />
