--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
   <style>
 	.assinatura-div{
 		font-family: 'Montserrat', sans-serif;
+		font-weight: normal;
 	}
 	font-family: 'Montserrat', sans-serif;
+	font-weight: normal;
   </style>
   <link rel="stylesheet" type="text/css" href="index.css" />
   <link rel="icon" href="C:\Users\Pedro\Desktop\Email-sign-generator-canvas\Email-sign-generator-canvas\assets\imgs\iconweb.png" type="image/png">
