--- a/index.html
+++ b/index.html
@@ -8,17 +8,13 @@
   <title>VIVAPREV - Gerador de Assinaturas</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <!--
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
   <style>
-	.assinatura-div{
-		font-family: 'Montserrat', sans-serif;
+	body {
+		font-family: 'Minhafonte', sans-serif;
 		font-weight: normal;
 	}
-	font-family: 'Montserrat', sans-serif;
-	font-weight: normal;
   </style>
-  -->
   <link rel="stylesheet" type="text/css" href="index.css" />
   <link rel="icon" href="C:\Users\Pedro\Desktop\Email-sign-generator-canvas\Email-sign-generator-canvas\assets\imgs\iconweb.png" type="image/png">
 </head>
