--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
   <style>
 	body {
-		font-family: 'Minhafonte', sans-serif;
+		font-family: 'Montserrat', sans-serif;
 		font-weight: normal;
 	}
   </style>
