--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+  <style>
+	  body {
+		font-family: Montserrat;
+		font-weight: normal;  
+	  }
+  </style>
   
   
 	
